[package]
name = "rsstv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
eframe = { version = "*", default-features = false, features = ["glow", "wayland", "x11"] }
egui_extras = { version = "0.31.1", features = ["image", "all_loaders"] }
image = "0.25.5"
num-complex = "0.4.6"
wavers = "1.5.1"
