[package]
name = "rsstv"
version = "0.1.0"
edition = "2024"
authors = ["Emmanuel Koutsouklakis <emmtbm55@gmail.com>"]
repository = "https://github.com/emm312/rsstv"
description = "A SSTV transcoder written in Rust. Currently supporting just the Martin M1 mode"
license = "GPL-3.0"

[dependencies]
biquad = "0.5.0"
clap = { version = "4.5.31", features = ["derive"], optional = true }
cpal = { version = "0.15.3", optional = true }
hilbert_transform = "0.1.1"
image = "0.25.5"
num-complex = "0.4.6"
wavers = "1.5.1"

wasm-bindgen = { version = "0.2.84", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["cpal", "clap"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]